--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "node ./node_modules/vue-gh-pages/index.js -b gh-pages"
   },
   "dependencies": {
+    "ant-design-vue": "^1.3.0-beta.0",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
